# bevy_point_cloud

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assets/shaders/: point_cloud.wgsl
examples/: audio.rs  basic.rs  dashboard.rs  paint.rs  terrain.rs
examples/common/: mod.rs
src/: brush.rs  grid.rs  lib.rs  material.rs  picking.rs  point_cloud.rs  point_cloud.wgsl  render.rs  splat.rs  splat.wgsl  splat_material.rs  systems.rs
