[package]
name = "bevy_point_cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
    "bevy_mesh",
    "bevy_asset",
] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.17", features = ["x11", "wayland", "multi_threaded", "bevy_pbr", "bevy_mesh", "bevy_picking"] }
bevy_panorbit_camera = "0.33"
cpal = "0.16"
rustfft = "6.4"
hound = "3.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "terrain"
path = "examples/terrain.rs"

[[example]]
name = "audio"
path = "examples/audio.rs"

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"
