[package]
name = "bevy_splat"
version = "0.1.0"
edition = "2024"
description = "GPU-instanced splat (point cloud) rendering for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/bevy_splat"
keywords = ["bevy", "splat", "point-cloud", "rendering", "instancing"]
categories = ["rendering", "game-development", "graphics"]
readme = "README.md"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_pbr",
    "bevy_mesh",
    "bevy_asset",
    "bevy_picking",
    "mesh_picking",
] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.18", features = ["x11", "wayland", "multi_threaded", "bevy_pbr", "bevy_mesh", "bevy_picking"] }
bevy_panorbit_camera = "0.34"
cpal = "0.16"
rustfft = "6.4"
hound = "3.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "terrain"
path = "examples/terrain.rs"

[[example]]
name = "audio"
path = "examples/audio.rs"

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"

[[example]]
name = "paint"
path = "examples/paint.rs"
